early-init isnt working so im removing it temporarily

--- a/init.org
+++ b/init.org
@@ -89,7 +89,9 @@ tangled, and the tangled file is compiled."
 ** Early init
 All this code is taken from Sophie Bosio.
 
-#+begin_src emacs-lisp :tangle early-init.el
+The following should go into =early-init.el=, but for some reason my nix doesn't do
+that, so for now it has to go into =init-el=.
+#+begin_src emacs-lisp 
 ;; Defer garbage collection
 (setq gc-cons-percentage 0.6)
 
@@ -263,9 +265,9 @@ I keep accidentally zooming when I'm scrolling through documents, so I unbind th
 
 * Visual
 ** Decluttering
-This is added to =early-init.el=.
+This should go into =early-init.el=, but as stated earlier, it no work with nix.
 
-#+begin_src emacs-lisp :tangle early-init.el
+#+begin_src emacs-lisp
 (dolist (mode
          '(tool-bar-mode                ; No toolbars, more room for text
            scroll-bar-mode              ; No scroll bars either
@@ -273,9 +275,10 @@ This is added to =early-init.el=.
   (funcall mode 0))
 #+end_src
 
-I'm currently testing this to see if there really is a difference, this also goes in the =early-init.el=.
+I'm currently testing this to see if there really is a difference, this should
+also go into =early-init.el=.
 
-#+begin_src emacs-lisp :tangle early-init.el
+#+begin_src emacs-lisp
 (add-to-list 'default-frame-alist '(undecorated-round . t))
 (add-to-list 'default-frame-alist '(internal-border-width . 24))
 #+end_src
