--- a/init.org
+++ b/init.org
@@ -634,10 +634,29 @@ I temporarily disable vertico-posframe-mode when searching with consult. When se
         orderless-component-separator "[ |]"))
 #+end_src
 
+** Company
+# NOTE: I've had a problem with lsp-mode or company causing emacs to freeze, so ive moved back to corfu + eglot
+   
+   [[https://github.com/company-mode/company-mode][Company]] is a text and code completion framework for Emacs. The name stands for "complete anything".
+   
+   #+begin_src emacs-lisp :tangle yes
+(use-package company
+  :config
+  (setq company-idle-delay                 0.0
+        company-minimum-prefix-length      3
+        company-tooltip-align-annotations  t
+        company-tooltip-annotation-padding 1
+        company-tooltip-margin             1
+        company-detect-icons-margin        'company-dot-icons-margin)
+  (global-company-mode t))
+   #+end_src
+
 ** Corfu
+Note: I'm trying LSP-mode, so this is not currently in use
+   
 I use [[https://github.com/minad/corfu][corfu]] for =completion-in-region=. I wish to have a VSCode like completion ui, therefore I have enabled =corfu-auto=. Perhaps one day I'll get proficient with =M-\=.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp : tangle no
 (use-package corfu
   :init
   (global-corfu-mode 1)
@@ -649,9 +668,11 @@ I use [[https://github.com/minad/corfu][corfu]] for =completion-in-region=. I wi
 #+end_src
 
 ** Cape
+# Note: I'm trying LSP-mode, so this is not currently in use
+   
 I use [[https://github.com/minad/cape][cape]] to help =corfu-auto=.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle yes
 (use-package cape
   :init
   (add-hook 'completion-at-point-functions #'cape-dabbrev)
@@ -1127,6 +1148,17 @@ I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the dire
   :bind (:map custom-bindings-map ("C-ø" . evilnc-comment-or-uncomment-lines)))
 #+end_src
 
+** Flycheck
+   [[https://github.com/flycheck/flycheck][flycheck]] is a modern on-the-fly syntax checking extension for GNU Emacs, and
+   it is required for LSP-mode.
+   
+   #+begin_src emacs-lisp
+ (use-package flycheck
+  :defer t
+  :init (global-flycheck-mode)
+  :config (setq flycheck-display-errors-function #'ignore))
+   #+end_src
+
 ** Eglot
 NOTE: Outdated as I'm transitioning to lsp-mode
    
@@ -1137,19 +1169,23 @@ The following code is from Lars Tveito, mainly because I haven't had the time to
 #+begin_src emacs-lisp :tangle no
 (use-package eglot
   :defer t
-  :hook (eglot-managed-mode . (lambda ()
-                                (eglot-inlay-hints-mode -1)
-                                (add-hook 'before-save-hook 'eglot-format nil t)))
+  :hook ((python-mode . eglot-ensure)
+         (java-mode . eglot-ensure)
+         (c-mode . eglot-ensure)
+         (nix-mode . eglot-ensure))
   :config
-;;0  (setq eglot-events-buffer-size 0)
   (add-to-list 'eglot-server-programs
-               '(web-mode . ("svelteserver" "--stdio"))))
+               '(python-mode . ("pyright-langserver"))
+               '(java-mode . (""))
+               '(nix-mode . ("rnix-lsp"))))
 #+end_src
 
 ** LSP-mode
+# NOTE: I've had problems with emacs crashing after adding lsp-mode and company, so im moving back to corfu + eglot
+   
 [[https://github.com/emacs-lsp/lsp-mode][LSP-mode]] is an emacs client for LSPs. I use it for Java and C. 
    
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle yes
 (use-package lsp-mode
   :defer t
   :hook ((java-mode             . lsp)
@@ -1169,7 +1205,7 @@ The following code is from Lars Tveito, mainly because I haven't had the time to
   (setq lsp-enable-on-type-formatting nil)
   
   ;; Visual features
-  (setq lsp-headerline-breadcrumb-enable t    ;; No breadcrumbs
+  (setq lsp-headerline-breadcrumb-enable nil    ;; No breadcrumbs
         lsp-lens-enable                  nil  ;; No lenses
 
         ;; Enable code actions in the mode line
@@ -1201,14 +1237,14 @@ The following code is from Lars Tveito, mainly because I haven't had the time to
 #+end_src
 
 ** Python
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle yes
 (use-package lsp-pyright
   :hook (python-mode . lsp)
   :custom (lsp-pyright-langserver-command "pyright"))
 #+end_src
 
 ** Java
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle yes
 (use-package lsp-java
   :hook (java-mode . lsp))
 #+end_src
