--- a/init.org
+++ b/init.org
@@ -98,6 +98,7 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#java][Java]]
   - [[#nix][Nix]]
 - [[#activating-custom-keybindings][Activating Custom Keybindings]]
+  - [[#keybind-overrides][Keybind Overrides]]
   - [[#activating-the-keymap][Activating the Keymap]]
 
 * Setup
@@ -732,7 +733,7 @@ I use [[https://github.com/minad/corfu][corfu]] for =completion-in-region=. I wi
 (use-package corfu
   :init
   (global-corfu-mode 1)
-  (corfu-popupinfo-mode 1)
+  ;; (corfu-popupinfo-mode 1)
   :custom
   (corfu-auto t)
   (corfu-auto-delay 0.5)
@@ -1073,7 +1074,7 @@ exporting.
   :defer t)
 #+end_src
 
-This is WIP as ox-latex isn't in Nix.
+# This is WIP as ox-latex isn't in Nix.
 
 #+begin_src emacs-lisp
 (use-package ox-latex
@@ -1082,6 +1083,7 @@ This is WIP as ox-latex isn't in Nix.
   :config
   (setq org-export-allow-bind-keywords t
         org-latex-src-block-backend 'engraved
+        org-latex-engraved-theme catppuccin
         org-latex-pdf-process
         '("latexmk -pdflatex='xelatex -shell-escape -interaction nonstopmode' -pdf -f %f"))
 
@@ -1361,6 +1363,11 @@ the command to diable them.
 #+end_src
 
 * Activating Custom Keybindings
+** Keybind Overrides 
+#+begin_src emacs-lisp 
+(global-set-key (kbd "C-k") 'kill-whole-line)
+#+end_src   
+  
 ** Activating the Keymap
 Finally, we activate the custom keymap.
 
