--- a/init.org
+++ b/init.org
@@ -88,6 +88,7 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#latex-export][LaTeX export]]
   - [[#agenda][Agenda]]
   - [[#tasks][Tasks]]
+  - [[#cloud-sync][Cloud sync]]
 - [[#programming][Programming]]
   - [[#direnv][Direnv]]
   - [[#evil-nerd-commenter][Evil Nerd Commenter]]
@@ -733,9 +734,9 @@ I use [[https://github.com/minad/corfu][corfu]] for =completion-in-region=. I wi
 (use-package corfu
   :init
   (global-corfu-mode 1)
-  ;; (corfu-popupinfo-mode 1)
+  (corfu-popupinfo-mode 1)
   :custom
-  (corfu-auto t)
+  ;; (corfu-auto t)
   (corfu-auto-delay 0.5)
   (corfu-cycle t))
 #+end_src
@@ -775,7 +776,8 @@ I often press =C-x C-b= when I only mean to press =C-x b=.
   :bind (:map custom-bindings-map
               ("C-x b"   . consult-buffer)
               ("C-x C-b" . consult-buffer)
-              ("C-c r"   . consult-ripgrep))
+              ("C-c r"   . consult-ripgrep)
+              ("C-s"     . consult-line))
   :config
   (setq consult-preview-key (list :debounce 0.1 'any)))
 #+end_src
@@ -1009,12 +1011,12 @@ The following code is taken from Sophie Bosio and Lars Tveito.
               ("C-c C-c" . org-export-to-pdf-and-open))
   :config
   (setq org-adapt-indentation t
-      org-hide-leading-stars t
-      org-pretty-entities t
-      org-startup-folded 'showeverything
-      org-src-fontify-natively t
-	  org-src-tab-acts-natively t
-      org-edit-src-content-indentation 0)
+        org-hide-leading-stars t
+        org-pretty-entities t
+        org-startup-folded 'showeverything
+        org-src-fontify-natively t
+	    org-src-tab-acts-natively t
+        org-edit-src-content-indentation 0)
   
   ;; Resize Org headings
   (custom-set-faces
@@ -1102,8 +1104,7 @@ exporting.
    tweaking it to fit to my preferences
 
    #+begin_src emacs-lisp
-   (setq org-agenda-files '("~/uio/semester_2/org/agenda.org")
-         org-agenda-start-on-weekday nil
+   (setq org-agenda-start-on-weekday nil
          org-agenda-block-separator  nil
          org-agenda-remove-tags      t)
    
@@ -1230,6 +1231,19 @@ exporting.
     (define-key custom-bindings-map (kbd "C-c d") 'org-mark-as-done)
     #+end_src
     
+** Cloud sync
+   I am working on syncing all my org files in a cloud, Dropbox atm. This will
+   make it so that I can use things like [[https://www.beorgapp.com/][beorg]] and [[https://www.orgzly.com/][orgzly]] to sync ToDo's and
+   Agenda.
+
+   I am hoping to take a lot of inspiration from the following
+   [[https://github.com/rougier/emacs-gtd][github]] and [[https://www.labri.fr/perso/nrougier/GTD/index.html][blog]] by Nicolas P. Rougier.
+
+   #+begin_src emacs-lisp
+   (setq org-directory "~/Dropbox/org")
+   (setq org-agenda-files (concat org-directory "agenda.org"))
+   #+end_src
+   
 * Programming
 ** Direnv
 I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the direnv tool to determine per-directory/project environment variables and then set those environment variables on a per-buffer basis.
