--- a/init.org
+++ b/init.org
@@ -95,6 +95,7 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#evil-nerd-commenter][Evil Nerd Commenter]]
   - [[#flycheck][Flycheck]]
   - [[#eglot][Eglot]]
+  - [[#java][Java]]
   - [[#nix][Nix]]
 - [[#activating-custom-keybindings][Activating Custom Keybindings]]
   - [[#keybind-overrides][Keybind Overrides]]
@@ -1310,7 +1311,13 @@ The following code is from Lars Tveito, mainly because I haven't had the time to
                '(python-mode . ("pyright"))
                '(java-mode . ("jdtls"))))
 #+end_src
-
+** Java
+   #+begin_src emacs-lisp
+   (use-package java-mode
+     :ensure nil
+     :hook
+     (after-save . eglot-format-buffer))
+   #+end_src
 ** Nix
 #+begin_src emacs-lisp
 (use-package nix-mode
