--- a/init.org
+++ b/init.org
@@ -95,6 +95,7 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#evil-nerd-commenter][Evil Nerd Commenter]]
   - [[#flycheck][Flycheck]]
   - [[#eglot][Eglot]]
+  - [[#python][Python]]
   - [[#java][Java]]
   - [[#nix][Nix]]
 - [[#activating-custom-keybindings][Activating Custom Keybindings]]
@@ -1295,39 +1296,56 @@ I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the dire
    #+end_src
 
 ** Eglot
-I use Eglot as my lsp, mainly because it is built-in.
-
-The following code is from Lars Tveito, mainly because I haven't had the time to look properly into all the settings myself.
+I use Eglot as my lsp, mainly because it is built-in. It might be weird, but I
+prefer configuring =eglot-ensure= and eventual after save hooks in the specified
+languages config, so the =eglot= config is quite tame.
 
 #+begin_src emacs-lisp :tangle yes
 (use-package eglot
   :defer t
-  :hook ((python-mode . eglot-ensure)
-         (java-mode . eglot-ensure)
-         (c-mode . eglot-ensure)
-         (nix-mode . eglot-ensure))
   :config
   (add-to-list 'eglot-server-programs
                '(python-mode . ("pyright"))
                '(java-mode . ("jdtls"))))
 #+end_src
-** Java
+** Python
    #+begin_src emacs-lisp
-   (use-package java-mode
+   (use-package py-autopep8
+     :after python-mode
+     :config
+     (setq py-autopep8-options '("--aggressive")))
+   #+end_src
+   
+   #+begin_src emacs-lisp
+   (use-package python
      :ensure nil
      :hook
+     (python-mode . eglot-ensure)
+     (after-save  . py-autopep8-buffer))
+   #+end_src
+** Java
+   #+begin_src emacs-lisp
+   (use-package java
+     :ensure nil
+     :hook
+     (java-mode  . eglot-ensure)
      (after-save . eglot-format-buffer))
    #+end_src
 ** Nix
 #+begin_src emacs-lisp
 (use-package nix-mode
-  :mode ("\\.nix\\'" "\\.nix.in\\'"))
+  :mode ("\\.nix\\'" "\\.nix.in\\'")
+  :hook
+  (nix-mode . eglot-ensure))
+
 (use-package nix-drv-mode
   :ensure nix-mode
   :mode "\\.drv\\'")
+
 (use-package nix-shell
   :ensure nix-mode
   :commands (nix-shell-unpack nix-shell-configure nix-shell-build))
+
 (use-package nix-repl
   :ensure nix-mode
   :commands (nix-repl))
