--- a/init.org
+++ b/init.org
@@ -368,17 +368,18 @@ I like to have different colors depending on the level, [[https://github.com/Fan
 
 #+begin_src emacs-lisp
 (use-package rainbow-delimiters
-  :hook (prog-mode-hook . rainbow-delimiters-mode))
+  :hook (prog-mode . rainbow-delimiters-mode))
 #+end_src
 
 ** Theme
-I use [[https://github.com/catppuccin/emacs][catppuccin]] as my theme, with the latte flavour as my default.
+I use [[https://github.com/catppuccin/emacs][catppuccin]] as my theme, with the latte flavour for light-mode and mocha
+as dark-mode
 
 #+begin_src emacs-lisp
 (use-package catppuccin-theme
   :config
   (load-theme 'catppuccin :no-confirm)
-  (setq catppuccin-flavor 'latte) ;; 'latte, 'frappe, 'macchiato, or 'mocha
+  (setq catppuccin-flavor 'mocha) ;; 'latte, 'frappe, 'macchiato, or 'mocha
   (catppuccin-reload))
 #+end_src
 
@@ -543,12 +544,12 @@ Some variables are buffer-local, so we have to change them using =setq-default=.
 #+begin_src emacs-lisp
 (setq-default tab-width 4                       ; Smaller tabs
               fill-column 79                    ; Maximum line width
-               truncate-lines t                  ; Don't fold lines
-               indent-tabs-mode nil              ; Use spaces instead of tabs
-               split-width-threshold 160         ; Split verticly by default
-               split-height-threshold nil        ; Split verticly by default
-               frame-resize-pixelwise t          ; Fine-grained frame resize
-               auto-fill-function 'do-auto-fill) ; Auto-fill-mode everywhere
+              truncate-lines t                  ; Don't fold lines
+              indent-tabs-mode nil              ; Use spaces instead of tabs
+              split-width-threshold 160         ; Split verticly by default
+              split-height-threshold nil        ; Split verticly by default
+              frame-resize-pixelwise t          ; Fine-grained frame resize
+              auto-fill-function 'do-auto-fill) ; Auto-fill-mode everywhere
 #+end_src
 
 ** Autosave
@@ -573,7 +574,6 @@ To avoid file system clutter we put all auto saved files in a single directory.
 
 #+begin_src emacs-lisp
 (use-package mwim
-  :ensure t
   :bind (:map custom-bindings-map
               ("C-a" . mwim-beginning-of-code-or-line)
               ("C-e" . mwim-end-of-code-or-line)))
@@ -686,7 +686,7 @@ I also use a function taken from [[http://whattheemacsd.com/setup-ido.el-02.html
 (use-package vertico
   :bind (:map vertico-map ("~" . soph/take-me-home))
   :config
-  (vertico-mode)
+  (vertico-mode 1)
   (setq vertico-count 25))
 #+end_src
 
@@ -724,11 +724,9 @@ I temporarily disable vertico-posframe-mode when searching with consult. When se
 #+end_src
 
 ** Corfu
-# Note: I'm trying LSP-mode, so this is not currently in use
-   
 I use [[https://github.com/minad/corfu][corfu]] for =completion-in-region=. I wish to have a VSCode like completion ui, therefore I have enabled =corfu-auto=. Perhaps one day I'll get proficient with =M-\=.
 
-#+begin_src emacs-lisp : tangle yes
+#+begin_src emacs-lisp
 (use-package corfu
   :init
   (global-corfu-mode 1)
@@ -740,8 +738,6 @@ I use [[https://github.com/minad/corfu][corfu]] for =completion-in-region=. I wi
 #+end_src
 
 ** Cape
-# Note: I'm trying LSP-mode, so this is not currently in use
-   
 I use [[https://github.com/minad/cape][cape]] to help =corfu-auto=.
 
 #+begin_src emacs-lisp :tangle yes
@@ -750,8 +746,7 @@ I use [[https://github.com/minad/cape][cape]] to help =corfu-auto=.
   (add-hook 'completion-at-point-functions #'cape-dabbrev)
   (add-hook 'completion-at-point-functions #'cape-file)
   (add-hook 'completion-at-point-functions #'cape-elisp-block)  
-  (add-hook 'completion-at-point-functions #'cape-keyword)
-  (message (format "Loading my capf extensions: %s" completion-at-point-functions)))
+  (add-hook 'completion-at-point-functions #'cape-keyword))
 #+end_src
 
 * Search
@@ -845,7 +840,8 @@ Desktop to emacs.
 #+end_src
 
 *** Highlighting with =diff-hl=
-[[https://github.com/dgutov/diff-hl][diff-hl]] highlights added, deleted and modified code segments by adding a colored bar on the left side of the buffer.
+    [[https://github.com/dgutov/diff-hl][diff-hl]] highlights added, deleted and modified code segments by adding a
+    colored bar on the left side of the buffer.
 
 #+begin_src emacs-lisp
 (use-package diff-hl
@@ -854,9 +850,9 @@ Desktop to emacs.
 #+end_src
 
 *** Blamer
-[[https://github.com/Artawower/blamer.el][Blamer]] is a git blame pluggin inspired by GitLens
+    [[https://github.com/Artawower/blamer.el][Blamer]] is a git blame pluggin inspired by GitLens
 
-I got this from Sophie Bosio, and it seemed interesting.
+    I got this from Sophie Bosio, and it seemed interesting.
 
 #+begin_src emacs-lisp
 (use-package blamer
@@ -873,9 +869,9 @@ I got this from Sophie Bosio, and it seemed interesting.
   (blamer-commit-formatter          " ● %s")
   :custom-face
   (blamer-face ((t :foreground "#008b8b"
-                    :background nil
-                    :height 1
-                    :italic nil))))
+                   :background nil
+                   :height 1
+                   :italic nil))))
 #+end_src
 
 ** Snippets
@@ -901,7 +897,7 @@ and automatically expand it into function templates. I use this over abbrevs.
 #+begin_src emacs-lisp
 (use-package which-key
   :config
-  (which-key-mode))
+  (which-key-mode 1))
 #+end_src
 
 ** Spelling
@@ -1036,8 +1032,8 @@ exporting.
 #+begin_src emacs-lisp
 (use-package toc-org
   :after org
-  :config
-  (add-hook 'org-mode-hook 'toc-org-mode))
+  :hook
+  (org-mode . toc-org-mode))
 #+end_src
 
 ** Org Appear
@@ -1082,8 +1078,6 @@ exporting.
 (use-package engrave-faces
   :after org)
 #+end_src
-
-# This is WIP as ox-latex isn't in Nix.
 
 #+begin_src emacs-lisp
 (use-package ox-latex
@@ -1146,21 +1140,6 @@ exporting.
    (define-key custom-bindings-map (kbd "C-c a") 'org-agenda)
    #+end_src
 
-*** Super Agenda
-    [[https://github.com/alphapapa/org-super-agenda][org-super-agenda]] lets you group agenda items into sections, so it’s easier
-    to navigate.
-
-   #+begin_src emacs-lisp
-   (use-package org-super-agenda
-     :after org
-     :config
-     (setq org-super-agenda-header-prefix "\n❯ ")
-     ;; Hide the thin width char glyph
-     (add-hook 'org-agenda-mode-hook
-               #'(lambda () (setq-local nobreak-char-display nil)))
-     (org-super-agenda-mode))
-   #+end_src
-   
 *** Displaying Scheduled and Deadline Items
     #+begin_src emacs-lisp
     (setq org-agenda-skip-deadline-if-done  t
@@ -1264,7 +1243,8 @@ exporting.
    
 * Programming
 ** Direnv
-I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the direnv tool to determine per-directory/project environment variables and then set those environment variables on a per-buffer basis.
+   I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the direnv tool to determine
+   per-directory/project environment variables and then set those environment variables on a per-buffer basis.
 
 #+begin_src emacs-lisp
 (use-package envrc
@@ -1276,7 +1256,8 @@ I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the dire
 #+end_src
 
 ** Evil Nerd Commenter
-[[https://github.com/redguardtoo/evil-nerd-commenter][Evil Nerd Commenter]] automatically detects most programming languages, and applies the appropriate commenting.
+   [[https://github.com/redguardtoo/evil-nerd-commenter][Evil Nerd Commenter]] automatically detects most programming languages, and
+   applies the appropriate commenting.
 
 #+begin_src emacs-lisp
 (use-package evil-nerd-commenter
@@ -1296,11 +1277,11 @@ I use Nix with direnv, [[https://github.com/purcell/envrc][envrc]] uses the dire
    #+end_src
 
 ** Eglot
-I use Eglot as my lsp, mainly because it is built-in. It might be weird, but I
-prefer configuring =eglot-ensure= and eventual after save hooks in the specified
-languages config, so the =eglot= config is quite tame.
+   I use Eglot as my lsp, mainly because it is built-in. It might be weird, but I
+   prefer configuring =eglot-ensure= and eventual after save hooks in the specified
+   languages config, so the =eglot= config is quite tame.
 
-#+begin_src emacs-lisp :tangle yes
+#+begin_src emacs-lisp
 (use-package eglot
   :defer t
   :config
@@ -1308,6 +1289,7 @@ languages config, so the =eglot= config is quite tame.
                '(python-mode . ("pyright"))
                '(java-mode . ("jdtls"))))
 #+end_src
+
 ** Python
    #+begin_src emacs-lisp
    (use-package py-autopep8
@@ -1316,20 +1298,22 @@ languages config, so the =eglot= config is quite tame.
    #+end_src
    
    #+begin_src emacs-lisp
-   (use-package python
+   (use-package python-mode
      :ensure nil
      :hook
      (python-mode . eglot-ensure)
      (after-save  . py-autopep8-buffer))
    #+end_src
+   
 ** Java
    #+begin_src emacs-lisp
-   (use-package java
+   (use-package java-mode
      :ensure nil
      :hook
      (java-mode  . eglot-ensure)
      (after-save . eglot-format-buffer))
    #+end_src
+   
 ** Nix
 #+begin_src emacs-lisp
 (use-package nix-mode
