--- a/init.org
+++ b/init.org
@@ -1287,10 +1287,11 @@ exporting.
   :config
   (add-to-list 'eglot-server-programs
                '(python-mode . ("pyright"))
-               '(java-mode . ("jdtls"))))
+               '(java-mode   . ("jdtls"))))
 #+end_src
 
 ** Python
+   [[https://codeberg.org/ideasman42/emacs-py-autopep8][py-autopep8]] provides commands, which use the external autopep8 tool to tidy up the current buffer according to Python's PEP8.
    #+begin_src emacs-lisp
    (use-package py-autopep8
      :config
@@ -1302,16 +1303,20 @@ exporting.
      :ensure nil
      :hook
      (python-mode . eglot-ensure)
-     (after-save  . py-autopep8-buffer))
+     (python-mode . py-autopep8-mode))
    #+end_src
    
 ** Java
+   The lambda function makes it so that Java auto-formats on save, and that the
+   hook is a local hook.
+   
    #+begin_src emacs-lisp
-   (use-package java-mode
-     :ensure nil
-     :hook
-     (java-mode  . eglot-ensure)
-     (after-save . eglot-format-buffer))
+      (use-package java-mode
+        :ensure nil
+        :hook
+        (java-mode . eglot-ensure)
+        (java-mode . (lambda ()
+                       (add-hook 'after-save-hook #'eglot-format-buffer nil t))))
    #+end_src
    
 ** Nix
